More descriptive error message if lines don't match
Prior to this commit, a small number (42) of lines
were always included in the error message string.
This arbitrary number of lines did not always contain
the lines that did not match.
This commit removes the constant number and always
emits the two non-matching lines entirely.

Addresses part of #2233